--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.39",
+    "npm": "^6.0.1",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.1.0"
   },
